# Analitik-dashboard

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  schema_debug.json  tsconfig.json  updater.json  vite.config.ts
.github/workflows/: release.yml
scripts/: make-source-icon.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  auth.rs  mod.rs  user_flow.rs
src-tauri/src/db/: credentials.rs  error.rs  mod.rs  pool.rs
src-tauri/src/security/: crypto.rs  keychain.rs  mod.rs  storage.rs  vault.rs
src/app/: index.tsx
src/app/providers/: QueryProvider.tsx  SessionBootstrap.tsx  ThemeProvider.tsx  index.tsx
src/app/routes/: AppRouter.tsx  RedirectIfAuth.tsx  RequireAuth.tsx
src/app/styles/: global.css  theme.ts
src/entities/analytics/: index.ts
src/entities/comparison-range/: index.ts
src/entities/date-range/: index.ts
src/entities/session/: index.ts
src/features/auth-login/: index.ts
src/features/comparison-controls/: index.ts
src/features/refresh-data/: index.ts
src/features/updater/: index.ts
src/pages/campaigns/: index.ts
src/pages/user-flow/: index.ts
src/shared/api/: index.ts  tauri.ts
src/shared/config/: index.ts  routes.ts
src/widgets/campaigns-charts/: index.ts
src/widgets/campaigns-table/: index.ts
src/widgets/comparison-chart/: index.ts
src/widgets/comparison-summary/: index.ts
src/widgets/devices-overview/: index.ts
(+87 files in other folders)
