[package]
name = "analitic-dashboard"
version = "0.1.0"
description = "Analytics dashboard built with Tauri + React"
authors = ["you"]
edition = "2021"

[lib]
name = "analitic_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
